# src/App.ts
@@ -8,7 +8,7 @@ import { QueryRouter } from "./routes/QueryRouter";
 import { PublicRouter } from "./routes/PublicRouter";
 import * as PublicHandler from "./handlers/PublicHandler";
 import * as StorageHandler from "./handlers/Web3StorageHandler";
-import { checkDuplicate } from "./handlers/ClaimHandler";
+import { checkDuplicate, createBatch } from "./handlers/ClaimHandler";
 import { getCapabilities } from "./handlers/CapabilityHandler";
 import swaggerUi from "swagger-ui-express";
 const swaggerFile = require(`${__dirname}/../../swagger.json`);
@@ -109,6 +109,10 @@ class App {
         this.express.post("/claims/duplicate", async (req, res) => {
             const exists = await checkDuplicate(req.body.items);
             res.json({ duplicate: exists });
+        });
+
+        this.express.post("/claims/batch", async (req, res) => {
+            res.json(await createBatch(req.body.claims));
         });
     }
 }
